# surveysim

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/: changes.rst  conf.py  tutorial.rst
py/surveysim/: __init__.py  _version.py  exposures.py  nightops.py  simulator.py  stats.py  surveysim.py  util.py  weather.py
py/surveysim/scripts/: __init__.py  surveysim.py
py/surveysim/test/: __init__.py  test_exposures.py  test_stats.py  test_surveysim.py  test_util.py  test_weather.py
